src/assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 12 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 130 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | error ';'

    5 class: CLASS TYPEID '{' dummy_feature_list '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}'

    7 dummy_feature_list: %empty
    8                   | dummy_feature_list feature ';'
    9                   | feature ';'
   10                   | error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression

   14 formal_list: %empty
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expression_list: %empty
   19                | expression
   20                | expression_list ',' expression

   21 expression_block: expression ';'
   22                 | expression_block expression ';'
   23                 | error ';'

   24 chained_assignment: OBJECTID ':' TYPEID ASSIGN expression IN expression
   25                   | OBJECTID ':' TYPEID IN expression
   26                   | OBJECTID ':' TYPEID ',' chained_assignment
   27                   | OBJECTID ':' TYPEID ASSIGN expression ',' chained_assignment
   28                   | error ',' chained_assignment

   29 case: OBJECTID ':' TYPEID DARROW expression ';'

   30 case_list: case
   31          | case_list case

   32 expression: OBJECTID ASSIGN expression
   33           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression '.' OBJECTID '(' expression_list ')'
   35           | OBJECTID '(' expression_list ')'
   36           | IF expression THEN expression ELSE expression FI
   37           | WHILE expression LOOP expression POOL
   38           | '{' expression_block '}'
   39           | LET chained_assignment
   40           | CASE expression OF case_list ESAC
   41           | NEW TYPEID
   42           | ISVOID expression
   43           | expression '+' expression
   44           | expression '-' expression
   45           | expression '*' expression
   46           | expression '/' expression
   47           | '~' expression
   48           | expression '<' expression
   49           | expression LE expression
   50           | expression '=' expression
   51           | NOT expression
   52           | '(' expression ')'
   53           | OBJECTID
   54           | INT_CONST
   55           | STR_CONST
   56           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 33 34 35 52
    ')' (41) 11 33 34 35 52
    '*' (42) 45
    '+' (43) 43
    ',' (44) 16 20 26 27 28
    '-' (45) 44
    '.' (46) 33 34
    '/' (47) 46
    ':' (58) 11 12 13 17 24 25 26 27 29
    ';' (59) 2 3 4 8 9 10 21 22 23 29
    '<' (60) 48
    '=' (61) 50
    '@' (64) 33
    '{' (123) 5 6 11 38
    '}' (125) 5 6 11 38
    '~' (126) 47
    error (256) 4 10 23 28
    CLASS (258) 5 6
    ELSE (259) 36
    FI (260) 36
    IF (261) 36
    IN (262) 24 25
    INHERITS (263) 6
    LET (264) 39
    LOOP (265) 37
    POOL (266) 37
    THEN (267) 36
    WHILE (268) 37
    CASE (269) 40
    ESAC (270) 40
    OF (271) 40
    DARROW (272) 29
    NEW (273) 41
    ISVOID (274) 42
    STR_CONST <symbol> (275) 55
    INT_CONST <symbol> (276) 54
    BOOL_CONST <boolean> (277) 56
    TYPEID <symbol> (278) 5 6 11 12 13 17 24 25 26 27 29 33 41
    OBJECTID <symbol> (279) 11 12 13 17 24 25 26 27 29 32 33 34 35 53
    ASSIGN (280) 13 24 27 32
    NOT (281) 51
    LE (282) 49
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3
    class <class_> (48)
        on left: 5 6
        on right: 2 3
    dummy_feature_list <features> (49)
        on left: 7 8 9 10
        on right: 5 6 8
    feature <feature> (50)
        on left: 11 12 13
        on right: 8 9
    formal_list <formals> (51)
        on left: 14 15 16
        on right: 11 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expression_list <expressions> (53)
        on left: 18 19 20
        on right: 20 33 34 35
    expression_block <expressions> (54)
        on left: 21 22 23
        on right: 22 38
    chained_assignment <expression> (55)
        on left: 24 25 26 27 28
        on right: 26 27 28 39
    case <case_> (56)
        on left: 29
        on right: 30 31
    case_list <cases> (57)
        on left: 30 31
        on right: 31 40
    expression <expression> (58)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 11 13 19 20 21 22 24 25 27 29 32 33 34 36 37 40 42 43 44 45 46 47 48 49 50 51 52


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    5 class: CLASS . TYPEID '{' dummy_feature_list '}'
    6      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class ';'

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class . ';'

    ';'  shift, and go to state 10


State 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


State 7

    5 class: CLASS TYPEID . '{' dummy_feature_list '}'
    6      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 13


State 10

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


State 11

    6 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}'

    TYPEID  shift, and go to state 14


State 12

    5 class: CLASS TYPEID '{' . dummy_feature_list '}'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 17
    feature             go to state 18


State 13

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


State 14

    6 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}'

    '{'  shift, and go to state 19


State 15

   10 dummy_feature_list: error . ';'

    ';'  shift, and go to state 20


State 16

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    5 class: CLASS TYPEID '{' dummy_feature_list . '}'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 23

    feature  go to state 24


State 18

    9 dummy_feature_list: feature . ';'

    ';'  shift, and go to state 25


State 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 26
    feature             go to state 18


State 20

   10 dummy_feature_list: error ';' .

    $default  reduce using rule 10 (dummy_feature_list)


State 21

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 28
    formal       go to state 29


State 22

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 30


State 23

    5 class: CLASS TYPEID '{' dummy_feature_list '}' .

    $default  reduce using rule 5 (class)


State 24

    8 dummy_feature_list: dummy_feature_list feature . ';'

    ';'  shift, and go to state 31


State 25

    9 dummy_feature_list: feature ';' .

    $default  reduce using rule 9 (dummy_feature_list)


State 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 32

    feature  go to state 24


State 27

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 28

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 29

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 30

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 12 (feature)


State 31

    8 dummy_feature_list: dummy_feature_list feature ';' .

    $default  reduce using rule 8 (dummy_feature_list)


State 32

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' .

    $default  reduce using rule 6 (class)


State 33

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 34

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 38


State 35

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 39


State 36

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 54


State 37

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 38

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 55


State 39

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 40

   36 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 56


State 41

   39 expression: LET . chained_assignment

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    chained_assignment  go to state 59


State 42

   37 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 60


State 43

   40 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 61


State 44

   41 expression: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 45

   42 expression: ISVOID . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 63


State 46

   55 expression: STR_CONST .

    $default  reduce using rule 55 (expression)


State 47

   54 expression: INT_CONST .

    $default  reduce using rule 54 (expression)


State 48

   56 expression: BOOL_CONST .

    $default  reduce using rule 56 (expression)


State 49

   32 expression: OBJECTID . ASSIGN expression
   35           | OBJECTID . '(' expression_list ')'
   53           | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 53 (expression)


State 50

   51 expression: NOT . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 66


State 51

   47 expression: '~' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 67


State 52

   38 expression: '{' . expression_block '}'

    error       shift, and go to state 68
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression_block  go to state 69
    expression        go to state 70


State 53

   52 expression: '(' . expression ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 71


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LE   shift, and go to state 72
    '='  shift, and go to state 73
    '<'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '.'  shift, and go to state 79
    '@'  shift, and go to state 80

    $default  reduce using rule 13 (feature)


State 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 81


State 56

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   36           | IF expression . THEN expression ELSE expression FI
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '='   shift, and go to state 73
    '<'   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '.'   shift, and go to state 79
    '@'   shift, and go to state 80


State 57

   28 chained_assignment: error . ',' chained_assignment

    ','  shift, and go to state 83


State 58

   24 chained_assignment: OBJECTID . ':' TYPEID ASSIGN expression IN expression
   25                   | OBJECTID . ':' TYPEID IN expression
   26                   | OBJECTID . ':' TYPEID ',' chained_assignment
   27                   | OBJECTID . ':' TYPEID ASSIGN expression ',' chained_assignment

    ':'  shift, and go to state 84


State 59

   39 expression: LET chained_assignment .

    $default  reduce using rule 39 (expression)


State 60

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   37           | WHILE expression . LOOP expression POOL
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LOOP  shift, and go to state 85
    LE    shift, and go to state 72
    '='   shift, and go to state 73
    '<'   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '.'   shift, and go to state 79
    '@'   shift, and go to state 80


State 61

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   40           | CASE expression . OF case_list ESAC
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    OF   shift, and go to state 86
    LE   shift, and go to state 72
    '='  shift, and go to state 73
    '<'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '.'  shift, and go to state 79
    '@'  shift, and go to state 80


State 62

   41 expression: NEW TYPEID .

    $default  reduce using rule 41 (expression)


State 63

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   42           | ISVOID expression .
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '.'  shift, and go to state 79
    '@'  shift, and go to state 80

    $default  reduce using rule 42 (expression)


State 64

   32 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 87


State 65

   35 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 18 (expression_list)

    expression_list  go to state 88
    expression       go to state 89


State 66

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression
   51           | NOT expression .

    LE   shift, and go to state 72
    '='  shift, and go to state 73
    '<'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '.'  shift, and go to state 79
    '@'  shift, and go to state 80

    $default  reduce using rule 51 (expression)


State 67

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   47           | '~' expression .
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '.'  shift, and go to state 79
    '@'  shift, and go to state 80

    $default  reduce using rule 47 (expression)


State 68

   23 expression_block: error . ';'

    ';'  shift, and go to state 90


State 69

   22 expression_block: expression_block . expression ';'
   38 expression: '{' expression_block . '}'
